# welkin-core

./: .gitignore  Cargo.toml  example.sic  example.wc  n.wc
.github/workflows/: build.yml
kernels/: Cargo.toml  build.rs
kernels/src/: clear.comp.glsl  clear.comp.spv  lib.rs  redex.comp.glsl  redex.comp.spv  util.glsl  visit.comp.glsl  visit.comp.spv
src/: analysis.rs  convert.rs  lib.rs  main.rs
src/net/: mod.rs  storage.rs  vis.rs
src/net/accelerated/: mod.rs
src/term/: alloc.rs  check.rs  eq.rs  hash.rs  index.rs  infer.rs  map_primitive.rs  map_reference.rs  mod.rs  normalize.rs  parse.rs  serde_impls.rs  show.rs  stratified.rs
src/term/normalize/: mod.rs
src/term/normalize/tests/: mod.rs  normalize.rs  shift.rs  substitute.rs
src/term/parse/: mod.rs  typed.rs  untyped.rs
tests/: mod.rs
tests/net/: mod.rs
tests/primitives/: mod.rs
