[package]
name = "welkin-core"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
combine = "4.5.2"
derivative = "2.2.0"
dot = { git = "https://github.com/syntacticsugarglider/dot-rust", branch = "main" }
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "1.0.24"
